@@ -1,3 +1,5 @@
+$break-350px:  em(350px)
+
 .storystream-headerimage
 	position: relative
 	&__media
@@ -43,8 +45,9 @@
 
 	&__kicker
 		position: absolute
-		top: remify(-15px)
-		white-space: nowrap
+		top: remify(-20px)
+		color: $zon-lighter-grey
+		padding: remify(6px)
 
 	&__kicker-label
 		background: $zon-lighter-grey
@@ -57,7 +60,6 @@
 		margin-right: remify(10px)
 
 	&__kicker-text
-		color: $zon-lighter-grey
 		font-size: remify(15px)
 		letter-spacing: $zon-letter-spacing-m
 
@@ -68,7 +70,14 @@
 		font-size: remify(28px)
 		line-height: remify(34px)
 		margin: remify(16px 0 0)
-		padding: remify(20px 0)
+		padding: remify(25px 0 20px 0)
+
+	&__kicker,
+	&__title
+		white-space: nowrap
+		text-overflow: ellipsis
+		width: 100%
+		overflow: hidden
 
 	&__update
 		color: $zon-light-grey
@@ -86,6 +95,13 @@
 		margin: remify(5px 0 0 -20px)
 		position: absolute
 		width: remify(15px)
+
+// long titles are likely to break the design on small devices
+// use nowrap till further notice
++respond-min($break-0)
+	.storystream-headerimage
+		&__title
+			white-space: normal
 
 +respond-min($break-tablet-min)
 	.storystream-headerimage
